tests/snapshots/examples_fixtures/error_messages__immutable_binding.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/error_messages/immutable_binding.flx
== compile ==
failed (compile)
== diagnostics ==
error[E002]: Immutable Binding

Cannot reassign to immutable variable `count`.

  examples/error_messages/immutable_binding.flx:9:1
  |
9 | count = count + 1;
  | ^^^^^^^^^^^^^^^^^^

Hint:
  In Flux, bindings are immutable. Compute a new value with a new binding name (for example: `let next_count = ...`).
== stdout ==
<not executed>
