tests/snapshots/examples_fixtures/error_messages__unexpected_token.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/error_messages/unexpected_token.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
